# cmd/main.go
@@ -4,28 +4,26 @@ import (
 	"database/sql"
 	"fmt"
 
-	"github.com/vet-clinic-back/metrics-service/internal/config"
-	"github.com/vet-clinic-back/metrics-service/internal/handler"
-	"github.com/vet-clinic-back/metrics-service/internal/repository/postgres"
-	"github.com/vet-clinic-back/metrics-service/internal/usecase"
-
-	_ "github.com/jackc/pgx/v4/stdlib"
-	_ "github.com/vet-clinic-back/metrics-service/docs"
-
 	"github.com/gin-gonic/gin"
+	_ "github.com/jackc/pgx/v4/stdlib"
 	"github.com/jmoiron/sqlx"
 	"github.com/sirupsen/logrus"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+	_ "github.com/vet-clinic-back/metrics-service/docs"
+	"github.com/vet-clinic-back/metrics-service/internal/config"
+	"github.com/vet-clinic-back/metrics-service/internal/handler"
+	"github.com/vet-clinic-back/metrics-service/internal/repository/postgres"
+	"github.com/vet-clinic-back/metrics-service/internal/usecase"
 )
 
-// @title Health Metrics API
+// @title Health Monitoring API
 // @version 1.0
-// @description API for health monitoring system
+// @description API для сбора и анализа медицинских показателей
 // @termsOfService http://swagger.io/terms/
 
 // @contact.name API Support
-// @contact.email support@healthmetrics.com
+// @contact.email support@healthmonitor.com
 
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
@@ -41,10 +39,15 @@ func main() {
 		logger.Fatal("Config error:", err)
 	}
 
-	// Database connection
+	// Database setup
 	connStr := fmt.Sprintf(
-		"host=%s port=%s user=%s password=%s dbname=%s sslmode=%s",
-		cfg.DB.Host, cfg.DB.Port, cfg.DB.User, cfg.DB.Password, cfg.DB.DBName, cfg.DB.SSLMode,
+		"postgres://%s:%s@%s:%s/%s?sslmode=%s",
+		cfg.DB.User,
+		cfg.DB.Password,
+		cfg.DB.Host,
+		cfg.DB.Port,
+		cfg.DB.DBName,
+		cfg.DB.SSLMode,
 	)
 
 	db, err := sql.Open("pgx", connStr)
@@ -59,7 +62,7 @@ func main() {
 
 	dbx := sqlx.NewDb(db, "pgx")
 
-	// Repository and UseCase
+	// Dependency setup
 	repo := postgres.NewSensorDataRepo(dbx)
 	uc := usecase.NewSensorDataUseCase(repo)
 
@@ -74,11 +77,12 @@ func main() {
 	// HTTP Server
 	router := gin.Default()
 
-	// Swagger
+	// Добавляем маршрут для Swagger
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	httpHandler := handler.NewHTTPHandler(uc, logger)
 	router.GET("/metrics", httpHandler.GetMetrics)
+	router.POST("/metrics", httpHandler.SaveMetrics)
 
 	if err := router.Run(cfg.HTTP.Addr); err != nil {
 		logger.Fatal("HTTP server failed:", err)
