# docs/swagger.yaml
@@ -1,48 +1,101 @@
 basePath: /
 definitions:
-  handler.MetricsResponse:
+  entity.SensorData:
     properties:
-      chest_expansion:
-        type: number
-      muscle_activity:
-        type: number
-      pulse:
-        type: number
+      created_at:
+        type: string
+      id:
+        type: integer
       temperature:
+        type: number
+      value_muscle_activity:
+        type: number
+      value_pulse:
+        type: number
+      value1_load_cell:
+        type: number
+      value2_load_cell:
+        type: number
+      voltage_muscle_activity:
+        type: number
+      voltage_pulse:
+        type: number
+      voltage1_load_cell:
+        type: number
+      voltage2_load_cell_imag:
+        type: number
+      voltage2_load_cell_real:
         type: number
     type: object
 host: localhost:8080
 info:
   contact:
-    email: support@healthmetrics.com
+    email: support@healthmonitor.com
     name: API Support
-  description: API for health monitoring system
+  description: API для сбора и анализа медицинских показателей
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
-  title: Health Metrics API
+  title: Health Monitoring API
   version: "1.0"
 paths:
   /metrics:
     get:
       consumes:
       - application/json
-      description: Get latest health metrics from sensors
+      description: Возвращает последние сохраненные показатели датчиков
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Успешный ответ
           schema:
-            $ref: '#/definitions/handler.MetricsResponse'
-        "500":
-          description: Internal Server Error
+            $ref: '#/definitions/entity.SensorData'
+        "404":
+          description: Данные не найдены
           schema:
             additionalProperties:
               type: string
             type: object
-      summary: Get latest metrics
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Получить последние метрики
+      tags:
+      - metrics
+    post:
+      consumes:
+      - application/json
+      description: Принимает данные с датчиков и сохраняет их в базу данных
+      parameters:
+      - description: Данные датчиков
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/entity.SensorData'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Данные успешно сохранены
+        "400":
+          description: Некорректные данные
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Ошибка сохранения
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Сохранить новые метрики
       tags:
       - metrics
 swagger: "2.0"
